--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Administration/Administration.html",
-          "hash": "MeEHB1X8HCGEfiLaKNBsiw=="
+          "hash": "QKc/UUxXABZBrsjiTWhDxg=="
         }
       },
       "is_incremental": false,
@@ -30,7 +30,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Administration/ManagementTools.html",
-          "hash": "moyP953vtQL3JMVIxEuygA=="
+          "hash": "7xFPKB5T+qeFFdNJuLv7ng=="
         }
       },
       "is_incremental": false,
@@ -42,7 +42,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/CommandLine/CommandLine.html",
-          "hash": "B5v6JDCqRjTZYaZFv1vs/A=="
+          "hash": "LGKIOVEtHpF15jYMN6Xa+g=="
         }
       },
       "is_incremental": false,
@@ -54,7 +54,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/EdgeSystemConfiguration.html",
-          "hash": "UmKKC/bz8Rg+hFwrePXuwg=="
+          "hash": "vIh3FHSIrn198c60sXHd+Q=="
         }
       },
       "is_incremental": false,
@@ -66,7 +66,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/ConfigurationSchemaList.html",
-          "hash": "nYY8otlCPOeZsY2y3V7g/A=="
+          "hash": "BGi8SBRkz4jUYV1Qar2eeA=="
         }
       },
       "is_incremental": false,
@@ -78,7 +78,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/EdgeSystem_schema.html",
-          "hash": "IISdbXukxpNk2/EF9axV0A=="
+          "hash": "YRLyC85q/WzVQr4clksKlQ=="
         }
       },
       "is_incremental": false,
@@ -93,7 +93,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/Modbus_DataSelection_schema.html",
-          "hash": "BomUsGiOdIJEJraXY4Y48Q=="
+          "hash": "eTceoC+9UiFNj8gw/xmyHA=="
         }
       },
       "is_incremental": false,
@@ -108,7 +108,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/Modbus_DataSource_schema.html",
-          "hash": "WjQZcoSf5BMNdykM+3y34w=="
+          "hash": "T8xhjp3I0teYohFKKK41uA=="
         }
       },
       "is_incremental": false,
@@ -123,7 +123,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/Modbus_Logging_schema.html",
-          "hash": "k6Z/J+8rTjAmbWYLAyoxLA=="
+          "hash": "rtRpjil1eDwpYyNVOBGOCA=="
         }
       },
       "is_incremental": false,
@@ -138,7 +138,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/Modbus_schema.html",
-          "hash": "G0OUps2Dc1eXDZ38vlBDCg=="
+          "hash": "U7IG3L5+G6PbS+oXtBmvsw=="
         }
       },
       "is_incremental": false,
@@ -150,7 +150,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/OpcUa_DataSelection_schema.html",
-          "hash": "WDjuqn1zov3iQsip3Aml+A=="
+          "hash": "HBcwZy9hMY9RYELE2LRnwA=="
         }
       },
       "is_incremental": false,
@@ -165,7 +165,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/OpcUa_DataSource_schema.html",
-          "hash": "MsJ+Tn3hkulNQWYmsnk3CQ=="
+          "hash": "TCQmZFtNKfY/9nPiQyatmA=="
         }
       },
       "is_incremental": false,
@@ -180,7 +180,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/OpcUa_Logging_schema.html",
-          "hash": "8U9/zoFyEOZctec9bplWZA=="
+          "hash": "8FZFPoLYKD1HB4AzvT+xIw=="
         }
       },
       "is_incremental": false,
@@ -195,7 +195,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/OpcUa_schema.html",
-          "hash": "Yr6aQjJUuDsEOJvVvl1pgQ=="
+          "hash": "NAZGkkqPMPf6zV7iuNL/Ow=="
         }
       },
       "is_incremental": false,
@@ -210,7 +210,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/Storage_Logging_schema.html",
-          "hash": "9lqDV3mlKlj76vHd/SmQBw=="
+          "hash": "l7HhoWz74I/W3+B+qj1Frw=="
         }
       },
       "is_incremental": false,
@@ -225,7 +225,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/Storage_OEM_schema.html",
-          "hash": "XTSQJldDxGkpSaU3f/KIsg=="
+          "hash": "kKxbK5fqxfKU1dduQ4AQ+Q=="
         }
       },
       "is_incremental": false,
@@ -240,7 +240,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/Storage_PeriodicEgressEndpoints_schema.html",
-          "hash": "+dxkDLN+RRVzKL8pckp4PA=="
+          "hash": "pnJ5KmYFGGztbWDUsozuYA=="
         }
       },
       "is_incremental": false,
@@ -255,7 +255,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/Storage_Runtime_schema.html",
-          "hash": "mdR58wxFScHbhlKdhz8UYA=="
+          "hash": "7xLyxfX2lVpoZ775r9X6cA=="
         }
       },
       "is_incremental": false,
@@ -270,7 +270,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/Storage_schema.html",
-          "hash": "eBdSWaCoaIydHh3XrBxUEg=="
+          "hash": "gzzihY5hOHjJwrFGRLk2AQ=="
         }
       },
       "is_incremental": false,
@@ -285,7 +285,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/System_Components_schema.html",
-          "hash": "KZ/DwDtVRqYgqrMkM0GJkQ=="
+          "hash": "eV1KQca+GtiIWQ8jHjzw/Q=="
         }
       },
       "is_incremental": false,
@@ -300,7 +300,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/System_HealthEndpoints_schema.html",
-          "hash": "SnzmrN51o0YXEzB4qt3/Cw=="
+          "hash": "SRtTQ1vOTeKCOMlnKJiEUg=="
         }
       },
       "is_incremental": false,
@@ -315,7 +315,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/System_Logging_schema.html",
-          "hash": "OuKl1rcdoIhyeDODJxWMJg=="
+          "hash": "k6/P3S5IaXrA4A8U5oynEg=="
         }
       },
       "is_incremental": false,
@@ -330,7 +330,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/System_Port_schema.html",
-          "hash": "2ouSdvtW0WilWSIvAZLFoQ=="
+          "hash": "9LCKyszCNiwbpQQbulnH6Q=="
         }
       },
       "is_incremental": false,
@@ -346,7 +346,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Configuration/Schemas/System_schema.html",
-          "hash": "OOrKKM6hl7EmBMCIf8K2WQ=="
+          "hash": "7vQwf+m/tk6Qvac0cLyJgg=="
         }
       },
       "is_incremental": false,
@@ -358,7 +358,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Design/ScalePerformance.html",
-          "hash": "WcBxVItKyAEqdAquJ0sdKg=="
+          "hash": "8dKTfNBgIAg6ZmR4lBNDrQ=="
         }
       },
       "is_incremental": false,
@@ -370,7 +370,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Diagnostics/Diagnostics.html",
-          "hash": "XLwKwM8qNR4uKnIhoUYbRg=="
+          "hash": "xljkqnUprvXdPPsZXJQW7w=="
         }
       },
       "is_incremental": false,
@@ -382,7 +382,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Docker/EdgeDocker.html",
-          "hash": "STwMfkf67MyWTgcqYyBK/w=="
+          "hash": "81cMAVVwzhj3z2tpdYYw4w=="
         }
       },
       "is_incremental": false,
@@ -394,7 +394,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Egress/Egress.html",
-          "hash": "G2FOFLuuYhAJD9aaJDcmTA=="
+          "hash": "m/WqTD/eHHOR/tj/d+xG0g=="
         }
       },
       "is_incremental": false,
@@ -406,7 +406,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Health/Health.html",
-          "hash": "ttMrp2wrMxKEIWVmOSptrg=="
+          "hash": "6VPu2Ddk04K1vbM1kOOg+Q=="
         }
       },
       "is_incremental": false,
@@ -418,7 +418,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Installation/InstallationOverview.html",
-          "hash": "9cTHpm/S6vH6bN51sp3LpQ=="
+          "hash": "xmKeLQMrNDupvoRaSzf7NA=="
         }
       },
       "is_incremental": false,
@@ -430,7 +430,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/LinuxWindows/LinuxWindows.html",
-          "hash": "jgIPbhVW/jq2wDzkgC0UAQ=="
+          "hash": "F5hj951qJq9VzRit8lqsjg=="
         }
       },
       "is_incremental": false,
@@ -442,7 +442,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Modbus/ModbusOverview.html",
-          "hash": "1UubkczNMLGBd0Sylu1LkA=="
+          "hash": "Wk0EIw7kiXPq4JfXdefReA=="
         }
       },
       "is_incremental": false,
@@ -454,7 +454,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/OMF/OMFOverview.html",
-          "hash": "6qcS6SB5+nDDQ+J0xD9fzg=="
+          "hash": "n2W4IGJ1MX0AD/XvXZNZ2Q=="
         }
       },
       "is_incremental": false,
@@ -466,7 +466,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/OpcUa/OpcUaOverview.html",
-          "hash": "W9A2NRHakutqa+MiGIf8jA=="
+          "hash": "oW4KM3z45FK5SW3usFOYAQ=="
         }
       },
       "is_incremental": false,
@@ -478,7 +478,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Overview/EDSQuickStart.html",
-          "hash": "f5BKZVBJFnd6uXzITqLf4A=="
+          "hash": "j1kp8AiyquAClAbEuJXblA=="
         }
       },
       "is_incremental": false,
@@ -490,7 +490,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Overview/EdgeSystemOverview.html",
-          "hash": "yy1bmuINKmZoPfoU27BlOg=="
+          "hash": "hLj454xBK8FtgqMJIDCS0g=="
         }
       },
       "is_incremental": false,
@@ -502,7 +502,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Overview/ModbusQuickStart.html",
-          "hash": "s9ZLyG67BoWtCz02mrGw+g=="
+          "hash": "R8iuFTLh6r6ox8lLPNqytg=="
         }
       },
       "is_incremental": false,
@@ -514,7 +514,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Overview/OCSEgressQuickStart.html",
-          "hash": "aXq3so39gzy9/eWaOLoCIQ=="
+          "hash": "kx8buUsaWOjXPDPbJgZYGQ=="
         }
       },
       "is_incremental": false,
@@ -526,7 +526,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Overview/OpcUaQuickStart.html",
-          "hash": "cLFh88z9RdfKOfy5yQOcqA=="
+          "hash": "74uKxfoGOo9C0nJ+b4tD1w=="
         }
       },
       "is_incremental": false,
@@ -538,7 +538,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Overview/PIEgressQuickStart.html",
-          "hash": "k4gOCzSzQIaX4t+VC+dEBA=="
+          "hash": "ZUhSlkJL+CENuGYzi6TrVw=="
         }
       },
       "is_incremental": false,
@@ -550,7 +550,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/ReleaseNotes/ReleaseNotes.html",
-          "hash": "4wkLEpu+2SwjJu5P9ltlPA=="
+          "hash": "DIMQhFzVimUkffkaE6qokg=="
         }
       },
       "is_incremental": false,
@@ -562,7 +562,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/Compression.html",
-          "hash": "nBye/EvJJmPbImsic10efw=="
+          "hash": "s9Z03v7if0hIH7X7OHolvw=="
         }
       },
       "is_incremental": false,
@@ -574,7 +574,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/Filter_Expressions.html",
-          "hash": "W9Ow2RdIi5i2AvRUEoy1yQ=="
+          "hash": "J28/RlMaKqK3XxkPiauxZQ=="
         }
       },
       "is_incremental": false,
@@ -586,7 +586,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/Reading_Data.html",
-          "hash": "X0heirdwKhFb9bQ//4C97w=="
+          "hash": "COL92JaReU91iBPE61hM7w=="
         }
       },
       "is_incremental": false,
@@ -598,7 +598,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/Reading_Data_API.html",
-          "hash": "l8wh93eRVHr5IBkl/qbTHw=="
+          "hash": "u6QdZMYsgjkQ4KREHELEpA=="
         }
       },
       "is_incremental": false,
@@ -610,7 +610,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/SDS_Streams.html",
-          "hash": "f3gX+f0I7KSg/HkondY7qA=="
+          "hash": "5V+w152c+AGcztM4LMhWJA=="
         }
       },
       "is_incremental": false,
@@ -625,7 +625,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/SDS_Types.html",
-          "hash": "pf3zovIOHZmAlhLG/K90Kg=="
+          "hash": "W23yffolhi+BMPe/QEVj0g=="
         }
       },
       "is_incremental": false,
@@ -640,7 +640,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/SDS_Views.html",
-          "hash": "n5z14rGVEvfZe47TLejRRw=="
+          "hash": "FjvdWz6+tpiBA7W6+xh0RQ=="
         }
       },
       "is_incremental": false,
@@ -652,7 +652,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/SdsStreamExtra.html",
-          "hash": "e3F6l4luV999h/uMm1Ogjw=="
+          "hash": "lMuQXTAfBARXEonJ88pbUQ=="
         }
       },
       "is_incremental": false,
@@ -664,7 +664,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/Searching.html",
-          "hash": "StgvMmHvzXAmihDCcJntlA=="
+          "hash": "GG/DQPljN5lrdsc8gXMkig=="
         }
       },
       "is_incremental": false,
@@ -676,7 +676,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/SequentialDataStore.html",
-          "hash": "FqrFB0/wV6lj8KeLrkuSXA=="
+          "hash": "3fkog9HUwETppQcV9Dt+6A=="
         }
       },
       "is_incremental": false,
@@ -688,7 +688,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/Units_of_Measure.html",
-          "hash": "pxoTb71xRC/1u+YZCGbhLw=="
+          "hash": "GQ8F8uNawlPmXap7tBKgig=="
         }
       },
       "is_incremental": false,
@@ -700,7 +700,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/Writing_Data.html",
-          "hash": "Uae0dW56S1VJo0cNVYKbBw=="
+          "hash": "bA4FVMLIyiymbLfKaAMAJQ=="
         }
       },
       "is_incremental": false,
@@ -712,7 +712,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/Writing_Data_API.html",
-          "hash": "/RkwNbZrCbDZRH6bqnjaNg=="
+          "hash": "cuSll1X/Gu1T/3Ucunlj5Q=="
         }
       },
       "is_incremental": false,
@@ -724,7 +724,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/indexes.html",
-          "hash": "og9OPh16M8qJhekMhzIJ7A=="
+          "hash": "OrMzbVx5IXXvyp7f5U688w=="
         }
       },
       "is_incremental": false,
@@ -736,7 +736,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/SDS/table_format.html",
-          "hash": "+C4pDZtauFN96o8mI77lsw=="
+          "hash": "mqey6rAPFIEMH5bES5n1+g=="
         }
       },
       "is_incremental": false,
@@ -748,7 +748,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Security/SecurityOverview.html",
-          "hash": "90IaGckdtAP6Nj2LtPQ/GA=="
+          "hash": "UKBr82owKaXYPITSyaONew=="
         }
       },
       "is_incremental": false,
@@ -760,7 +760,29 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/Troubleshooting/Troubleshooting.html",
-          "hash": "BC2Zz9sot/y9nCurhYVtFQ=="
+          "hash": "23fHV9vlJ1GLVNjbjfenEw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "Beta2/images/Add_Button.png",
+      "output": {
+        "resource": {
+          "relative_path": "Beta2/images/Add_Button.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "Beta2/images/atlas_icon.png",
+      "output": {
+        "resource": {
+          "relative_path": "Beta2/images/atlas_icon.png"
         }
       },
       "is_incremental": false,
@@ -775,7 +797,7 @@
       "output": {
         ".html": {
           "relative_path": "Beta2/index.html",
-          "hash": "zAVl3JItZdaKm71RfAGrsA=="
+          "hash": "+fDphzEcMnkZsA6rlxTCjw=="
         }
       },
       "is_incremental": false,
@@ -787,7 +809,7 @@
       "output": {
         ".html": {
           "relative_path": "README.html",
-          "hash": "epva9+zFHD1ODH9Is/I7Ig=="
+          "hash": "8+uNRfEELq8OPPyml2wp5A=="
         }
       },
       "is_incremental": false,
@@ -799,7 +821,7 @@
       "output": {
         ".html": {
           "relative_path": "docfx.console.2.43.2/content/api/index.html",
-          "hash": "mrrHAr+BOemJOwed2tnswA=="
+          "hash": "OSCS+7K6k2zBHI3VM0UsOA=="
         }
       },
       "is_incremental": false,
@@ -811,7 +833,7 @@
       "output": {
         ".html": {
           "relative_path": "docfx.console.2.43.2/content/articles/intro.html",
-          "hash": "1v73uucS/jzRqyWXVnO3bg=="
+          "hash": "NBJRagIwjLY4VibnOMLcaA=="
         }
       },
       "is_incremental": false,
@@ -823,7 +845,7 @@
       "output": {
         ".html": {
           "relative_path": "docfx.console.2.43.2/content/articles/toc.html",
-          "hash": "t7iiFrmuYmrKWisdq+lN6Q=="
+          "hash": "de3SmzqQ1T7GjaEp3gPAzw=="
         }
       },
       "is_incremental": false,
@@ -835,7 +857,7 @@
       "output": {
         ".html": {
           "relative_path": "docfx.console.2.43.2/content/index.html",
-          "hash": "t3qv3H8D3wIaVXVH7a87zA=="
+          "hash": "/AlHe9SgHFN3x6GNgFkI5A=="
         }
       },
       "is_incremental": false,
@@ -850,7 +872,7 @@
       "output": {
         ".html": {
           "relative_path": "toc.html",
-          "hash": "PlMWcZtGaxqloxmXxEQp0Q=="
+          "hash": "4wgVALolt5X8olbdBt2F7w=="
         }
       },
       "is_incremental": false,
@@ -868,9 +890,9 @@
         "full_build_reason_code": "NoAvailableBuildCache"
       },
       "processors": {
-        "TocDocumentProcessor": {
+        "ResourceDocumentProcessor": {
           "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build",
           "total_file_count": 0,
           "skipped_file_count": 0
@@ -879,6 +901,13 @@
           "can_incremental": false,
           "incrementalPhase": "build",
           "total_file_count": 63,
+          "skipped_file_count": 0
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build",
+          "total_file_count": 0,
           "skipped_file_count": 0
         }
       }
